--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@heroicons/react": "^2.2.0",
+    "@supabase/supabase-js": "^2.86.0",
     "axios": "^1.13.2",
     "next": "16.0.3",
     "openai": "^6.9.0",
