--- a/package.json
+++ b/package.json
@@ -10,10 +10,15 @@
   },
   "dependencies": {
     "@heroicons/react": "^2.2.0",
+    "@sparticuz/chromium": "^141.0.0",
     "@supabase/supabase-js": "^2.86.0",
     "axios": "^1.13.2",
+    "jspdf": "^3.0.4",
+    "jspdf-autotable": "^5.0.2",
     "next": "16.0.3",
     "openai": "^6.9.0",
+    "puppeteer": "^24.31.0",
+    "puppeteer-core": "^24.31.0",
     "react": "19.2.0",
     "react-dom": "19.2.0",
     "react-hot-toast": "^2.6.0",
